# bcc-base

./: README.md  cabal.project  default.nix  hie-cabal.yaml  release.nix  shell.nix  tbco-nix.json
base-deriving-via/: base-deriving-via.cabal
bcc-crypto-class/: README.md  bcc-crypto-class.cabal
bcc-crypto-class/memory-example/: Main.hs
bcc-crypto-class/src/Bcc/: Foreign.hs
bcc-crypto-class/src/Bcc/Crypto/: DSIGN.hs  Hash.hs  KES.hs  Libsodium.hs  PackedBytes.hs  PinnedSizedBytes.hs  Seed.hs  Util.hs  VRF.hs
bcc-crypto-class/src/Bcc/Crypto/DSIGN/: Class.hs  Ed25519.hs  Ed448.hs  Mock.hs  NeverUsed.hs
bcc-crypto-class/src/Bcc/Crypto/Hash/: Blake2b.hs  Class.hs  Keccak256.hs  NeverUsed.hs  SHA256.hs  SHA3_256.hs  Short.hs
bcc-crypto-class/src/Bcc/Crypto/KES/: Class.hs  Mock.hs  NeverUsed.hs  Simple.hs  Single.hs  Sum.hs
bcc-crypto-class/src/Bcc/Crypto/Libsodium/: C.hs  Constants.hsc  Hash.hs  Init.hs  MLockedBytes.hs  Memory.hs  UnsafeC.hs
bcc-crypto-class/src/Bcc/Crypto/Libsodium/MLockedBytes/: Internal.hs
bcc-crypto-class/src/Bcc/Crypto/Libsodium/Memory/: Internal.hs
bcc-crypto-class/src/Bcc/Crypto/VRF/: Class.hs  Mock.hs  NeverUsed.hs  Simple.hs
bcc-crypto-optimum/: README.md  bcc-crypto-optimum.cabal
bcc-crypto-optimum/src/Bcc/Crypto/VRF/: Optimum.hs
bcc-crypto-tests/: README.md  bcc-crypto-tests.cabal
bcc-crypto-tests/bench/: Main.hs
bcc-crypto-tests/src/Bench/Crypto/: KES.hs  VRF.hs
bcc-crypto-tests/src/Test/Crypto/: DSIGN.hs  Hash.hs  Instances.hs  KES.hs  Util.hs  VRF.hs
bcc-crypto-tests/test/: Main.hs
binary/: README.md  bcc-binary.cabal
binary/src/Bcc/: Binary.hs
binary/src/Bcc/Binary/: Annotated.hs  Deserialize.hs  Drop.hs  FromCBOR.hs  Raw.hs  Serialize.hs  ToCBOR.hs
binary/test/: LICENSE  bcc-binary-test.cabal  test.hs
binary/test/Test/Bcc/Binary/: Drop.hs  Failure.hs  Helpers.hs  RoundTrip.hs  Serialization.hs  SizeBounds.hs
binary/test/Test/Bcc/Binary/Helpers/: GoldenRoundTrip.hs
measures/: measures.cabal
nix/: default.nix  haskell.nix  pkgs.nix  sources.json
orphans-deriving-via/: orphans-deriving-via.cabal
slotting/: bcc-slotting.cabal
slotting/src/Bcc/Slotting/: Block.hs  EpochInfo.hs  Slot.hs  Time.hs
slotting/src/Bcc/Slotting/EpochInfo/: API.hs  Impl.hs
strict-containers/: strict-containers.cabal
strict-containers/src/Data/Maybe/: Strict.hs
