cabal-version: 2.2

name:                bcc-crypto-tests
version:             2.0.0
synopsis:            Tests for bcc-crypto-class and -optimum
description:         Tests for bcc-crypto-class and -optimum
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              The Blockchain Co (TBCO)
maintainer:          operations@bcccoin.io
copyright:           2020-2021 The Blockchain Co (TBCO)
category:            Currency
build-type:          Simple
extra-source-files:  README.md

flag development
    description: Disable `-Werror`
    default: False
    manual: True

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

  if (!flag(development))
    ghc-options:        -Werror

library
  import:               base, project-config
  hs-source-dirs:       src

  exposed-modules:      Test.Crypto.DSIGN
                        Test.Crypto.Hash
                        Test.Crypto.KES
                        Test.Crypto.Util
                        Test.Crypto.VRF
                        Test.Crypto.Instances
                        Bench.Crypto.VRF
                        Bench.Crypto.KES

  build-depends:        base
                      , bytestring
                      , bcc-binary
                      , bcc-crypto-class
                      , bcc-crypto-optimum
                      , bcc-prelude
                      , cborg
                      , cryptonite
                      , formatting
                      , nothunks
                      , QuickCheck
                      , quickcheck-instances
                      , tasty
                      , tasty-quickcheck
                      , criterion

test-suite test-crypto
  import:               base, project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs
  build-depends:        base
                      , bcc-crypto-class
                      , bcc-crypto-tests
                      , tasty

  ghc-options:          -threaded

benchmark bench-crypto
  import:               base, project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench
  main-is:              Main.hs
  build-depends:        base
                      , bcc-crypto-class
                      , bcc-crypto-tests
                      , criterion

  ghc-options:          -threaded
