cabal-version: 2.2

name:                bcc-binary
version:             1.5.0
synopsis:            Binary serialization for Bcc
description:         This package includes the binary serialization format for Bcc
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              The Blockchain Co (TBCO)
maintainer:          operations@blockchain-company.io
copyright:           2021 The Blockchain Co.
category:            Currency
build-type:          Simple
extra-source-files:  README.md

flag development
    description: Disable `-Werror`
    default: False
    manual: True

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

  if (!flag(development))
    ghc-options:        -Werror

library
  import:               base, project-config
  hs-source-dirs:       src
  exposed-modules:      Bcc.Binary
  other-modules:        Bcc.Binary.Annotated
                        Bcc.Binary.Drop
                        Bcc.Binary.Raw

                        Bcc.Binary.ToCBOR
                        Bcc.Binary.FromCBOR

                        Bcc.Binary.Serialize
                        Bcc.Binary.Deserialize

  build-depends:        base
                      , aeson
                      , bytestring
                      , bcc-prelude
                      , cborg              >= 0.2.2 && < 0.3
                      , containers
                      , data-fix
                      , formatting
                      , nothunks
                      , primitive
                      , recursion-schemes  >= 5.1   && < 5.3
                      , safe-exceptions
                      , tagged
                      , text
                      , time
                      , vector

test-suite test
  import:               base, project-config
  hs-source-dirs:       test
  main-is:              test.hs
  type:                 exitcode-stdio-1.0

  other-modules:        Test.Bcc.Binary.SizeBounds
                        Test.Bcc.Binary.Helpers
                        Test.Bcc.Binary.Helpers.GoldenRoundTrip
                        Test.Bcc.Binary.RoundTrip
                        Test.Bcc.Binary.Serialization
                        Test.Bcc.Binary.Drop
                        Test.Bcc.Binary.Failure

  build-depends:        base
                      , bytestring
                      , bcc-binary
                      , bcc-prelude
                      , bcc-prelude-test
                      , cborg
                      , containers
                      , formatting
                      , hedgehog
                      , hspec
                      , pretty-show
                      , QuickCheck
                      , quickcheck-instances
                      , tagged
                      , text
                      , time
                      , vector

  ghc-options:          -threaded
                        -rtsopts
