cabal-version: 2.2

name:                bcc-slotting
version:             0.1.0.0
synopsis:            Key slotting types for bcc libraries
-- description:
-- bug-reports:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              The Blockchain Co (TBCO) Formal Methods Team
maintainer:          formal.methods@bcccoin.io
copyright:           The Blockchain Co (TBCO)
-- category:
build-type:          Simple

flag development
    description: Disable `-Werror`
    default: False
    manual: True

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wunused-packages

  if (!flag(development))
    ghc-options:        -Werror

library
  import:               base, project-config

  exposed-modules:
                        Bcc.Slotting.Block
                        Bcc.Slotting.EpochInfo
                        Bcc.Slotting.EpochInfo.API
                        Bcc.Slotting.EpochInfo.Impl
                        Bcc.Slotting.Slot
                        Bcc.Slotting.Time

  build-depends:        aeson
                      , base
                      , bcc-binary
                      , cborg
                      , deepseq
                      , mmorph
                      , nothunks
                      , quiet
                      , serialise
                      , time             >=1.9.1 && <1.11
