cabal-version: 2.2

name:                bcc-binary-test
version:             1.3.0
synopsis:            Test helpers from bcc-binary exposed to other packages
description:         Test helpers from bcc-binary exposed to other packages
license:             MIT
license-file:        LICENSE
author:              The Blockchain Co (TBCO)
maintainer:          operations@bcccoin.io
copyright:           2021 GodXCoin
category:            Currency
build-type:          Simple

flag development
    description: Disable `-Werror`
    default: False
    manual: True

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

  if (!flag(development))
    ghc-options:         -Werror

library
  import:               base, project-config
  exposed-modules:      Test.Bcc.Binary.Helpers
                        Test.Bcc.Binary.Helpers.GoldenRoundTrip
                        Test.Bcc.Binary.Serialization
                        Test.Bcc.Binary.Drop
                        Test.Bcc.Binary.Failure

  build-depends:        base
                      , bytestring
                      , bcc-binary
                      , bcc-prelude
                      , bcc-prelude-test
                      , cborg
                      , containers
                      , formatting
                      , hedgehog
                      , hspec
                      , pretty-show
                      , QuickCheck
                      , quickcheck-instances
                      , text
                      , time
                      , vector
